[package]
name = "transfer-rs"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
dotenv = "0.14.1"
failure = "0.1.6"
futures = "0.1.29"
hyper = "0.12.35"
regex = "1.3.1"
structopt = "0.3.3"
tokio = "0.1.22"
