[package]
name = "transfer-rs"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

[dependencies]
dotenv = "0.14.1"
env_logger = "0.7.0"
failure = "0.1.6"
futures = "0.1.29"
hyper = "0.12.35"
log = "0.4.8"
regex = "1.3.1"
structopt = "0.3.3"
tokio = "0.1.22"

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]

[target.'cfg(windows)'.dependencies.winapi]
version = "=0.3.6"
features =  ["winbase"]
